<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/library_apps_background"
    android:padding="@dimen/_20sdp"
    tools:context=".BackButtonsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/rate_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/design_default_color_primary"
                android:drawableTint="@color/design_default_color_primary"
                android:drawableStart="@drawable/ic_rate_review"
                android:text="@string/rate_this_app" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:drawableTint="@color/design_default_color_primary"
                android:drawableStart="@drawable/ic_feedback"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/feedback" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:drawableTint="@color/design_default_color_primary"
                android:drawableStart="@drawable/ic_privacy_lock"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/privacy_policy" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardPreventCornerOverlap="true">

            <TextView
                android:id="@+id/our_apps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:drawableTint="@color/design_default_color_primary"
                android:drawableStart="@drawable/ic_android"
                android:padding="@dimen/_16sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/our_apps" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>